# ComputerVision-OpenCV-CPP

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  mainVideo.cpp
chapter2/: CMakeLists.txt  fileStorage.cpp  matrixOperations.cpp  objectTypes.cpp
chapter5/: CMakeLists.txt  README.md  preprocess.cpp
chapter6/: CMakeLists.txt  README.md  experiment.cpp
